@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(tpanel VERSION 2.0.0 LANGUAGES CXX)
+project(tpanel VERSION 2.0.1 LANGUAGES CXX)
 
 if(ANDROID)
     message("** Current platform (${ANDROID_ABI}): ${ANDROID_PLATFORM}")
