@@ -1,6 +1,6 @@
 sonar.projectKey=TPanel-Sonar
 sonar.projectName=TPanel
-sonar.projectVersion=2.0.0
+sonar.projectVersion=2.0.1
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/*.java,**/*.ts
 sonar.sources=ftplib,src
