@@ -24,11 +24,11 @@
 
 #define V_MAJOR     2
 #define V_MINOR     0
-#define V_PATCH     0
+#define V_PATCH     1
 #define V_ADD       "b1"
 
 #ifndef V_SERIAL
-#define V_SERIAL    "20250915TP200R"
+#define V_SERIAL    "20251228TP201R"
 #endif
 
 /**
