@@ -79,6 +79,8 @@
 #define SYSTEM_ITEM_DATEDDMONYYYY       157
 #define SYSTEM_ITEM_DATEYYYYMMDD        158
 #define SYSTEM_ITEM_SOUNDPLAYTESTSOUND  159
+#define SYSTEM_ITEM_LATITUDE            161
+#define SYSTEM_ITEM_LONGITUDE           162
 #define SYSTEM_ITEM_VOLUMEUP            171
 #define SYSTEM_ITEM_VOLUMEDOWN          172
 #define SYSTEM_ITEM_VOLUMEMUTE          173
